@@ -1,48 +1,53 @@
 // Bug.m					SimpleBug
 
 #import "Bug.h"
-#import <simtools.h>
+#import <random.h>
 
 @implementation Bug
 
--setWorldSizeX: (int) xSize Y: (int) ySize {
+- setWorldSizeX: (int)xSize Y: (int)ySize
+{
   worldXSize = xSize;
   worldYSize = ySize;
   return self;
 }
 
--setFoodSpace: (id) f {
-   foodSpace = f;
-   return self;
+- setFoodSpace: f
+{
+  foodSpace = f;
+  return self;
 }
 
--createEnd {
-   return [super createEnd];
+- createEnd
+{
+  return [super createEnd];
 }
 
--setX: (int) x Y: (int) y {
+- setX: (int)x Y: (int)y
+{
   xPos = x;
   yPos = y;
   printf("I started at X = %d Y = %d \n\n", xPos, yPos);
   return self;
 }
 
--step {
-
+- step
+{
   xPos = xPos + [uniformIntRand getIntegerWithMin: -1 withMax: 1];
   yPos = yPos + [uniformIntRand getIntegerWithMin: -1 withMax: 1];
 
   xPos = (xPos + worldXSize) % worldXSize;
   yPos = (yPos + worldYSize) % worldYSize;
 
-  if ([foodSpace getValueAtX: xPos Y: yPos] == 1) {
+  if ([foodSpace getValueAtX: xPos Y: yPos] == 1)
+    {
       [foodSpace putValue: 0 atX: xPos Y: yPos];
       printf( "I found food at X = %d Y = %d ! \n", xPos, yPos);
-  }
-
+    }
+  
   return self;
 }
-  
+
 @end
 
   
