@@ -1,3 +1,10 @@
+1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Bug.m:  Include random.h instead of simtools.h.
+	Reformatting throughout.
+
+	* FoodSpace.m: Likewise.
+
 1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Bug.h: Include from objectbase/ instead of swarmobject/.
